# machine-learning-kmean

./: Makefile  README.md  pyproject.toml
models/: kmeans_pipeline.pkl  model_random_forest.pkl
src/: __init__.py  explore.ipynb  utils.py
